--- a/package.json
+++ b/package.json
@@ -22,11 +22,19 @@
     "chai": "^3.5.0",
     "eslint-config-codestates": "https://github.com/codestates/eslint-config-codestates",
     "mocha": "^2.4.5",
+    "nodemon": "^1.17.3",
     "request": "^2.70.0"
   },
   "babel": {
     "presets": [
       "es2015"
     ]
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "bower": "^1.8.4",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "underscore": "^1.8.3"
   }
 }
